fix: add scrollbars to app not body

--- a/packages/themes/src/scrollbars.css
+++ b/packages/themes/src/scrollbars.css
@@ -13,6 +13,13 @@
   .custom-scroll:hover {
     scrollbar-color: var(--scalar-scrollbar-color, transparent) transparent;
   }
+  /* Force Obtrusive Scrollbars */
+  &.scalar-scrollbars-obtrusive {
+    .cm-scroller,
+    .custom-scroll {
+      scrollbar-color: var(--scalar-scrollbar-color, transparent) transparent;
+    }
+  }
   .cm-scroller:hover::-webkit-scrollbar-thumb,
   .custom-scroll:hover::-webkit-scrollbar-thumb {
     background: var(--scalar-scrollbar-color);
@@ -50,14 +57,5 @@
     .custom-scroll {
       padding-right: 12px;
     }
-  }
-}
-
-/* Force Obtrusive Scrollbars */
-.layout-scrollbar-obtrusive.scalar-app,
-.layout-scrollbar-obtrusive .scalar-app {
-  .cm-scroller,
-  .custom-scroll {
-    scrollbar-color: var(--scalar-scrollbar-color, transparent) transparent;
   }
 }
